# screen-recoder-da

./: .gitignore  ACCESS_FROM_WINDOWS.txt  ALL_FIXES_APPLIED.md  BUILD_FIXES.md  BUILD_READY.md  BUILD_SCRIPTS_FIXED.md  BUILD_WINDOWS.md  BUILD_WINDOWS_NOW.md  COMPILATION_FIXES.md  DEBUGGING_GUIDE.md  DEPENDENCY_GUIDE.md  FINAL_STATUS.md  FIND_WINDOWS_EXE.md  HOW_TO_RUN.md  IMPLEMENTATION_NOTES.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_BUILD.md  README.md  RUN_AND_BUILD_GUIDE.md  RUST_VERSION_REQUIREMENT.md  TECHNICAL_DOCUMENTATION.md  VIDEO_FILE_STATUS.md  WINDOWS_BUILD_FIXES.md  WINDOWS_BUILD_QUICKSTART.md  WSL_FIX.md  build-windows.bat  check-dependencies.bat  check-dependencies.ps1  check-dependencies.sh  check-port.js  dependencies.txt  index.html  package-lock.json  package.json  setup.bat  setup.ps1  setup.sh  test-simple.html  (+2 more)
documentation/: ALL_ISSUES_FIXED.md  BUILD_SCRIPTS_FIXED.md  BUILD_WINDOWS_NOW.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_FIXES.md  CRITICAL_FIX.md  DEBUGGING_GUIDE.md  DEBUG_BLANK_SCREEN.md  DESKTOP_APP_GUIDE.md  FINAL_FIXES_SUMMARY.md  FIX_RUST_PATH.md  HOW_TO_RUN.md  MAINTENANCE_CHECKLIST.md  NEXT_STEPS.md  QUICKSTART.md  QUICK_BUILD.md  QUICK_FIX.md  QUICK_FIX_NOW.md  README.md  RECORDING_STATUS.md  RUN_AND_BUILD_GUIDE.md  RUN_DESKTOP_APP.md  STARTUP_GUIDE.md  SUCCESS.md  TROUBLESHOOTING.md  WINDOWS_BUILD_FIXES.md  WINDOWS_BUILD_QUICKSTART.md  WSL_FIX.md
scripts/: build-windows.ps1  cleanup-port.sh  run-tauri-dev.sh
src/: App.css  App.tsx  ErrorBoundary.tsx  global.d.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  README_ICONS.md  tauri.conf.json  verify_icons.sh
src-tauri/capabilities/: default.json
src-tauri/icons/: create_icons.sh
src-tauri/src/: analytics.rs  encoder.rs  main.rs  observability.rs  session.rs  system_metrics.rs
src-tauri/src/capture/: mod.rs  windows.rs
src/components/: DevicePicker.css  DevicePicker.tsx  MetricsPanel.css  MetricsPanel.tsx  RecordingControls.css  RecordingControls.tsx  Timeline.css  Timeline.tsx
