[package]
name = "screen-recorder"
version = "1.0.0"
description = "Professional desktop screen recorder with analytics"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Observability
opentelemetry = { version = "0.21", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["metrics"] }
opentelemetry_prometheus = { package = "opentelemetry-prometheus", version = "0.14" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# Image processing for analytics
image = "0.25"
rayon = "1.8"

# Audio processing
hound = "3.5"

# Async trait
async-trait = "0.1"

# Directories
dirs = "6.0"

# Chrono for timestamps
chrono = "0.4"

# System metrics
sysinfo = "0.30"

# Audio processing for analytics
rubato = "0.14"

# FFmpeg bindings (optional - requires system FFmpeg installation)
# Uncomment when FFmpeg is installed on the system
# ffmpeg-next = "6.1"

# Windows capture
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Com",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
] }

